erDiagram
  %% SkillEX main ERD for Mermaid
  %% Kept lean for a cleaner landscape-friendly presentation view.

  USERS {
    string id PK
    string name
    string username
    string email
    string password_hash
    string avatar
    string avatar_url
    string university
    string location
    string bio
    string teach_intent_text
    string learn_intent_text
    int skillex_score
    string level
    string role
    int sessions_completed
    decimal rating
    boolean is_online
    boolean connections_public
    datetime joined_at
    datetime updated_at
  }

  SKILLS {
    string id PK
    string name
    string icon
    string category
    string description
  }

  USER_SKILLS_OFFERED {
    string user_id PK, FK
    string skill_id PK, FK
    string level
  }

  USER_SKILLS_WANTED {
    string user_id PK, FK
    string skill_id PK, FK
    string level
  }

  EXCHANGES {
    string id PK
    string requester_id FK
    string receiver_id FK
    string offered_skill_id FK
    string wanted_skill_id FK
    string message
    string status
    datetime session_date
    datetime created_at
    datetime updated_at
  }

  SESSIONS {
    string id PK
    string exchange_id FK
    string teacher_id FK
    string learner_id FK
    string skill_id FK
    datetime scheduled_at
    int duration_mins
    string status
    string meet_link
    datetime created_at
    datetime updated_at
  }

  REVIEWS {
    string id PK
    string session_id FK
    string from_user FK
    string to_user FK
    string skill_id FK
    int rating
    string comment
    datetime created_at
  }

  EVENTS {
    string id PK
    string title
    string description
    string host_id FK
    datetime event_date
    string location
    boolean is_online
    string cover_gradient
    datetime created_at
  }

  EVENT_SKILLS {
    string event_id PK, FK
    string skill_id PK, FK
  }

  EVENT_ATTENDEES {
    string event_id PK, FK
    string user_id PK, FK
  }

  DISCUSSIONS {
    string id PK
    string title
    string content
    string author_id FK
    string category
    int upvotes
    int replies
    int views
    boolean is_pinned
    datetime created_at
  }

  SKILL_CIRCLES {
    string id PK
    string name
    string icon
    int member_count
    datetime last_session
    string activity
    datetime created_at
  }

  SKILL_CIRCLE_MEMBERS {
    string circle_id PK, FK
    string user_id PK, FK
  }

  SKILL_CIRCLE_SKILLS {
    string circle_id PK, FK
    string skill_id PK, FK
  }

  POSTS {
    string id PK
    string type
    string author_id FK
    string content
    string skill_id FK
    string badge
    int likes
    int comments
    int shares
    datetime created_at
  }

  STORIES {
    string id PK
    string user_id FK
    boolean is_seen
    datetime created_at
  }

  NOTIFICATIONS {
    string id PK
    string user_id FK
    string type
    string message
    string from_user_id FK
    boolean is_read
    datetime created_at
  }

  MESSAGES {
    string id PK
    string sender_id FK
    string receiver_id FK
    string content
    string type
    string image_url
    boolean is_read
    datetime created_at
  }

  SKILL_RELATIONS {
    string skill_id PK, FK
    string related_skill_id PK, FK
    decimal similarity_score
  }

  SKILL_EMBEDDINGS {
    string skill_id PK, FK
    string model_name
    int dimensions
    string vector_json
    string source_text
    datetime updated_at
  }

  PENDING_SKILLS {
    string id PK
    string normalized_name
    string display_name
    string category
    string description
    string source_intent
    string status
    int seen_count
    float confidence_sum
    datetime first_seen_at
    datetime last_seen_at
    string requested_by_user_id FK
    string promoted_skill_id FK
    string reviewed_by_user_id FK
    string review_note
    datetime reviewed_at
    datetime created_at
    datetime updated_at
  }

  SKILL_CATALOG_AUDIT {
    string id PK
    string action
    string pending_skill_id FK
    string skill_id FK
    string actor_user_id FK
    string details
    datetime created_at
  }

  CONNECTIONS {
    string id PK
    string requester_id FK
    string receiver_id FK
    string message
    string status
    datetime responded_at
    datetime created_at
    datetime updated_at
  }

  SKILL_CREDIT_WALLETS {
    string id PK
    string user_id FK
    int balance
    datetime created_at
    datetime updated_at
  }

  SKILL_CREDIT_LEDGER {
    string id PK
    string wallet_id FK
    int delta
    string reason
    string reference_type
    string reference_id
    datetime created_at
  }

  SKILL_PACKAGES {
    string id PK
    string title
    string description
    int credit_cost
    decimal cash_cost
    boolean is_active
    datetime created_at
  }

  CREDIT_REDEMPTIONS {
    string id PK
    string user_id FK
    string package_id FK
    int credits_spent
    decimal cash_paid
    string status
    datetime created_at
  }

  %% Core identity and skill mapping
  USERS ||--o{ USER_SKILLS_OFFERED : teaches
  SKILLS ||--o{ USER_SKILLS_OFFERED : offered_skill
  USERS ||--o{ USER_SKILLS_WANTED : wants
  SKILLS ||--o{ USER_SKILLS_WANTED : wanted_skill

  %% Exchange pipeline
  USERS ||--o{ EXCHANGES : requester
  USERS ||--o{ EXCHANGES : receiver
  SKILLS ||--o{ EXCHANGES : offered
  SKILLS ||--o{ EXCHANGES : wanted
  EXCHANGES ||--o{ SESSIONS : creates
  USERS ||--o{ SESSIONS : teaches
  USERS ||--o{ SESSIONS : learns
  SKILLS ||--o{ SESSIONS : session_skill
  SESSIONS ||--o{ REVIEWS : produces
  USERS ||--o{ REVIEWS : from_user
  USERS ||--o{ REVIEWS : to_user
  SKILLS ||--o{ REVIEWS : reviewed_skill
  USERS ||--o{ CONNECTIONS : requester
  USERS ||--o{ CONNECTIONS : receiver

  %% Messaging and alerts
  USERS ||--o{ MESSAGES : sends
  USERS ||--o{ MESSAGES : receives
  USERS ||--o{ NOTIFICATIONS : receives
  USERS ||--o{ NOTIFICATIONS : sends

  %% Community layer
  USERS ||--o{ EVENTS : hosts
  EVENTS ||--o{ EVENT_SKILLS : tagged_with
  SKILLS ||--o{ EVENT_SKILLS : tags
  EVENTS ||--o{ EVENT_ATTENDEES : attended_by
  USERS ||--o{ EVENT_ATTENDEES : attends
  USERS ||--o{ DISCUSSIONS : authors
  USERS ||--o{ SKILL_CIRCLE_MEMBERS : member_of
  SKILL_CIRCLES ||--o{ SKILL_CIRCLE_MEMBERS : has_members
  SKILL_CIRCLES ||--o{ SKILL_CIRCLE_SKILLS : focuses_on
  SKILLS ||--o{ SKILL_CIRCLE_SKILLS : circle_skill
  USERS ||--o{ POSTS : writes
  SKILLS ||--o{ POSTS : tags
  USERS ||--o{ STORIES : posts_story

  %% Intelligence and governance
  SKILLS ||--o{ SKILL_RELATIONS : source_skill
  SKILLS ||--o{ SKILL_RELATIONS : related_skill
  SKILLS ||--o{ SKILL_EMBEDDINGS : embeds
  USERS ||--o{ PENDING_SKILLS : requests
  USERS ||--o{ PENDING_SKILLS : reviews
  SKILLS ||--o{ PENDING_SKILLS : promoted_from
  PENDING_SKILLS ||--o{ SKILL_CATALOG_AUDIT : audit_for
  SKILLS ||--o{ SKILL_CATALOG_AUDIT : audit_skill
  USERS ||--o{ SKILL_CATALOG_AUDIT : audit_actor

  %% Credit economy roadmap
  USERS ||--|| SKILL_CREDIT_WALLETS : owns
  SKILL_CREDIT_WALLETS ||--o{ SKILL_CREDIT_LEDGER : logs
  USERS ||--o{ CREDIT_REDEMPTIONS : redeems
  SKILL_PACKAGES ||--o{ CREDIT_REDEMPTIONS : package
